# renameplus

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
renameplus_gui/: Cargo.toml
renameplus_gui/src/: file.rs  gui.rs  helper.rs  main.rs  replace.rs  run.rs  update.rs  view.rs
renameplus_gui/src/errors/: gui.rs
renameplus_gui/src/presets/: col.rs  mod.rs  row.rs
renameplus_gui/src/widgets/: file.rs  mod.rs  replace.rs  set.rs
src/: args.rs  config.rs  error.rs  error_log.rs  helper.rs  input.rs  lib.rs  log.rs  main.rs  new_rename.rs  parse.rs  parse_args.rs  rename.rs
src/errors/: log.rs
tests/: ui.rs
