[package]
name = "renameplus"
version = "0.1.0"
edition = "2021"
authors = ["LeSnake <dev.lesnake@posteo.de>"]
description = "Smart rename tool (alternative to mv)"
repository = "https://www.github.com/lesnake04/renameplus"
license-file = "LICENSE.txt"
categories = ["command-line-utilities"]
keywords = ["mv", "unix" ]

readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
bstr = "1.4.0"
clap = { version = "4.2", features = ["cargo"] }
dialoguer = "0.10.4"
dirs = "5.0.1"
error_log = { git = "https://github.com/LeSnake04/error_log.git", branch = "dev", features = ["anyhow"] }
# clap_logger = "0.3"
fern = { version = "0.6", features = ["colored"] }
figment = { version = "0.10.8", features = ["env", "toml"] }
flexi_logger = "0.25.4"
log = "0.4"
# miette = { version = "5.3.0", features = ["fancy"] }
owo-colors = "3.5.0"
serde = {version = "1.0.162", features = ["derive"]}
snake_helper = "0.1.0"
thiserror = "1.0.40"
toml = "0.7.3"

[dev-dependencies]
trybuild = "1.0"

[profile.release]
strip = true
# panic = "abort"
lto = true

[features]
# gui = ["dep:renameplus_gui"]

[workspace]
members = ["renameplus_gui"]
