[package]
name = "renameplus_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
renameplus = {path = "..", version = "*"}
native-dialog = "0.6"
iced = { version = "0.9", features = ["default_system_font", "tokio"] }
tokio = "1.27.0"
anyhow = { version = "1.0.70", features = ["backtrace"] }
flexi_logger = "0.25.3"
itertools = "0.10.5"
snake_helper = "0.1.0"
log = "0.4.17"
clap = "4.2.2"
figment = { version = "0.10.8", features = ["env", "toml"] }
serde = { version = "1.0.160", features = ["derive"] }
iced_native = "0.10.1"
error_log = { version = "0.1.2", features = ["native-dialog"] }
# iced_aw = {git = "https://github.com/iced-rs/iced_aw", rev="193e3bd8e6de4d8ce14ac2f2767323574b8fc712"}
